--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     */
 
 
+    /*
     if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('topContacts').style.display = 'none';
+      document.getElementById('topContacts').style.back = 'none';
     }
     if(document.getElementsByTagName('h1').length === 0) {
       document.getElementById('header').style.display = 'none';
@@ -133,6 +134,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     if(document.getElementById('map') === null) {
       document.getElementById('mapDiv').style.display = 'none';
     }
+    */
   </script>
 </body>
 </html>
